--- a/index.html
+++ b/index.html
@@ -1,75 +1,54 @@
 <!DOCTYPE html>
-<HTML lang="en">
-<HEAD>
-    <title>Testing WebPage!!!</title>
-    <link rel="icon" href="resources/icon_logo.png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" href="styles/basic.css">
-
-    <meta charset="utf-8"/>
-</HEAD>
-<!--<BODY style="background-image: url('../resources/background.jpg');">-->
-<BODY>
-<br/>
-<p>Hi, Welcome to My HomePage</p>
-<br/>
-<p>Rezaur Rahman</p>
-<img src="resources/profile_photo.JPG" ALT="My Photo-Not Found-" height="150" width="200">
-<br/>
-<ul>
-    <li>
-        HTML & CSS
-        <ul>
-            <li><a href="HomeWork1/pie.html"> HomeWork 1</a></li>
-            <li><a href="HomeWork2/tmnt.html"> HomeWork 2</a></li>
-            <li><a href="HomeWork4/testForm.html"> HomeWork 4</a></li>
-            <li><a href="HomeWork8/ascii.html"> HomeWork 8</a></li>
-            <li><a href="HomeWork9/fifteen.html"> HomeWork 9</a></li>
-        </ul>
-    </li>
-
-    <li>
-    Assignment
-    <ul>
-        <li><a href="HomeWork4/gradeForm.html"> Grade Exercise</a></li>
-        <li><a href="TipCalculator/index.html"> TipCalculator & onClickAction</a></li>
-        <li><a href="Javascript Exercises Lab/index.html"> Error Exercises</a></li>
-        <li><a href="DecorateMyText/decoratemytext.html"> Decorate My Text</a></li>
-        <li><a href="ModuleAndClosure/module_colsure.html"> Module and Closure Lab</a></li>
-        <li><a href="MouseMaze/maze.html"> Mouse Maze</a></li>
-    </ul>
-    </li>
-
-    <li>
-    Quizzes
-    <ul>
-        <li><a href="Quizzes/servlet.html">Servlet Quiz</a></li>
-        <li><a href="Quizzes/stateManagement.html">State Management Quiz</a></li>
-        <li><a href="Quizzes/jspInto.html">JSP Intro Quiz</a></li>
-        <li><a href="Quizzes/jspCustomTag.html">JSP Custom Tag Quiz</a></li>
-        <li><a href="Quizzes/JavascriptTimerExercises/index.html">Javascript Timer Exercises</a></li>
-        <li><a href="Quizzes/scopeExercise.html">Scope Exercises</a></li>
-        <li><a href="Quizzes/moduleExercises.html">Module Exercises</a></li>
-        <li><a href="Quizzes/jqueryQuiz.html">JQuery Quiz I</a></li>
-        <li><a href="Quizzes/jqueryQuiz2.html">JQuery Quiz II</a></li>
-        <li><a href="Quizzes/jqueryQuiz3.html">JQuery Quiz II</a></li>
-    </ul>
-    </li>
-    <li><a href="https://github.com/reza5630/WAP-Lab/tree/master/WebContainerProjects"> Servlet Projects</a></li>
-    <li><a href="https://github.com/reza5630/WAP-Lab/tree/master/Try"> Final Project</a></li>	<!-- Intellij Project-->
-    <hr/>
-    <li><a href="aboutMe.html"> About Me </a></li>
-    <li><a href="findMe.html"> Find Me </a></li>
-</ul>
-
-<div class="footer">
-    <a href="https://validator.w3.org/check/referer">
-        <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-             alt="html validator"/>
-    </a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img src=http://jigsaw.w3.org/css-validator/images/vcss
-             alt="Valid CSS!"/>
-    </a>
-</div>
-</BODY>
-</HTML>
+<html>
+<head>
+	<title>Jahanzeb CS472</title>
+	<link rel="icon" href="resources/photo.jpg" type="image/jpg" sizes="16x16">
+</head>
+<body style="margin:0px;">
+	
+	<div id="header" style="background-color:black; color:white">
+		<img src="resources/photo.jpg" alt="Profile Photo" height="250" width="180">
+		<h1>Jahanzeb Ahmed</h1>
+	</div>
+	
+	<div id="body">
+		<h3>Web Application Programming CS472</h3>
+		<div style="margin-left:30px">
+			<div id="assignment">
+				<h4>Assignment</h4>
+				<ul>
+					<li><a href="#">Homework-1: Recipe</a></li>
+					<li><a href="#">Homework-2: Movie Review</a></li>
+					<li><a href="#">Homework-4: NerdLuv</a></li>
+				</ul>
+			</div>
+			<div id="quize">
+				<h4>Quize</h4>
+				<ul>
+					<li><a>No quize yet</a></li>
+				</ul>
+			</div>
+			<div id="project">
+				<h4>Project</h4>
+				<ul>
+					<li><a>No project yet</a></li>
+				</ul>	
+			</div>
+		</div>
+	</div>
+	
+	<div id="footer" style="background-color:black; color:white; padding-top:10px; padding-bottom:10px; margin-top:50px">
+		<div style="text-align:center">
+			<p style="margin:0px"><b>Jahanzeb Ahmed</b></p>
+			<p style="margin:0px">Maharishi International University</p>
+			<p style="margin:0px">Address: 1000 N 4TH ST, Fairfield Iowa 52557, U.S.A</p>
+			<p style="margin:0px">Email: <a>jahmed@miu.edu</a></p>
+		</div>
+		<div style="text-align:center; margin-top:30px">
+			<a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/> </a>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer"> <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> </a>
+		</div>
+	</div>
+	
+</body>
+</html>
