added utf-8 to header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Jahanzeb CS472</title>
 	<link rel="icon" href="resources/photo.jpg" type="image/jpg" sizes="16x16">
+	<meta charset="utf-8"/>
 </head>
 <body style="margin:0px;">
 	
