--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Jahanzeb CS472</title>
 	<link rel="icon" href="resources/photo.jpg" type="image/jpg" sizes="16x16">
