--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<p style="margin:0px">Email: <a>jahmed@miu.edu</a></p>
 		</div>
 		<div style="text-align:center; margin-top:30px">
-			<a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/> </a>
+			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2F"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/> </a>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer"> <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> </a>
 		</div>
 	</div>
