--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body style="margin:0px;">
 	
-	<div id="header" style="background-color:black; color:white">
+	<div id="header" style="background-color:black; color:white; padding-bottom:5px">
 		<img src="resources/photo.jpg" alt="Profile Photo" height="250" width="180">
-		<h1>Jahanzeb Ahmed</h1>
+		<h1 style="margin:0px">Jahanzeb Ahmed</h1>
 	</div>
 	
 	<div id="body">
