aboutme page added

--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Jahanzeb CS472</title>
+	<title>Homepage</title>
 	<link rel="icon" href="resources/photo.jpg" type="image/jpg" sizes="16x16">
 	<meta charset="utf-8"/>
 </head>
 <body style="margin:0px;">
 	
 	<div id="header" style="background-color:black; color:white; padding-bottom:5px">
-		<img src="resources/photo.jpg" alt="Profile Photo" height="250" width="180">
-		<h1 style="margin:0px">Jahanzeb Ahmed</h1>
+		<img src="resources/photo.jpg" alt="Profile Photo" height="250" width="180" style="display:inline-block">
+		<div style="display:inline-block"><h1 style="margin:0px; display:inline-block">Jahanzeb Ahmed</h1> <a href="aboutme.html" style="display:inline-block; color:blue"> (About Me)</a></div>
 	</div>
 	
 	<div id="body">
 		<h3>Web Application Programming CS472</h3>
 		<div style="margin-left:30px">
-			<div id="assignment">
-				<h4>Assignment</h4>
+			<div id="homework">
+				<h4>Homework</h4>
 				<ul>
-					<li><a href="#">Homework-1: Recipe</a></li>
-					<li><a href="#">Homework-2: Movie Review</a></li>
-					<li><a href="#">Homework-4: NerdLuv</a></li>
+					<li><a href="#">Homework 1: Recipe</a></li>
+					<li><a href="#">Homework 2: Movie Review</a></li>
+					<li><a href="#">Homework 3: NerdLuv</a></li>
 				</ul>
 			</div>
-			<div id="quize">
-				<h4>Quize</h4>
+			<div id="lab">
+				<h4>Lab</h4>
 				<ul>
-					<li><a>No quize yet</a></li>
+					<li><a href="https://jahanzebahmed7.github.io/cs472/">Lab 1: My Homepage Lab</a></li>
+					<li><a href="#">Lab 2: About Me Lab</a></li>
 				</ul>
 			</div>
 			<div id="project">
