--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<div id="header" style="background-color:black; color:white; padding-bottom:5px">
 		<img src="resources/photo.jpg" alt="Profile Photo" height="250" width="180" style="display:inline-block">
-		<div style="display:inline-block"><h1 style="margin:0px; display:inline-block">Jahanzeb Ahmed</h1> <a href="aboutme.html" style="display:inline-block; color:blue"> (About Me)</a></div>
+		<div style="display:inline-block"><h1 style="margin:0px; display:inline-block">Jahanzeb Ahmed</h1></div>
 	</div>
 	
 	<div id="body">
@@ -26,8 +26,8 @@
 			<div id="lab">
 				<h4>Lab</h4>
 				<ul>
-					<li><a href="https://jahanzebahmed7.github.io/cs472/">Lab 1: My Homepage Lab</a></li>
-					<li><a href="#">Lab 2: About Me Lab</a></li>
+					<li><a href="index.html">Lab 1: My Homepage Lab</a></li>
+					<li><a href="aboutme.html">Lab 2: About Me Lab</a></li>
 				</ul>
 			</div>
 			<div id="project">
