added pie recipe page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="homework">
 				<h4>Homework</h4>
 				<ul>
-					<li><a href="#">Homework 1: Recipe</a></li>
+					<li><a href="homework1/pie.html">Homework 1: Recipe</a></li>
 					<li><a href="#">Homework 2: Movie Review</a></li>
 					<li><a href="#">Homework 3: NerdLuv</a></li>
 				</ul>
