--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 				<h4>Homework</h4>
 				<ul>
 					<li><a href="homework1/pie.html">Homework 1: Recipe</a></li>
-					<li><a href="#">Homework 2: Movie Review</a></li>
+					<li><a href="homework1/tmnt.html">Homework 2: Movie Review</a></li>
 					<li><a href="#">Homework 3: NerdLuv</a></li>
 				</ul>
 			</div>
 			<div id="lab">
 				<h4>Lab</h4>
 				<ul>
-					<li><a href="index.html">Lab 1: My Homepage Lab</a></li>
-					<li><a href="aboutme.html">Lab 2: About Me Lab</a></li>
+					<li><a href="index.html">Lab 1: My Homepage</a></li>
+					<li><a href="aboutme.html">Lab 2: About Me</a></li>
 				</ul>
 			</div>
 			<div id="project">
