--- a/homework2/tmnt.html
+++ b/homework2/tmnt.html
@@ -145,8 +145,8 @@
             <p>(1-10) of 88</p>
         </div>
         <div class="validator">
-            <a href="http://validator.w3.org/check/referer"><img src="assets/w3c-html.png" alt="Valid HTML5" /></a> <br />
-            <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="assets/w3c-css.png" alt="Valid CSS" /></a>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2Fhomework2%2Ftmnt.html"><img src="assets/w3c-html.png" alt="Valid HTML5" /></a> <br />
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2Fhomework2%2Ftmnt.html"><img src="assets/w3c-css.png" alt="Valid CSS" /></a>
         </div>
     </div>
 
