added nerdluv page

--- a/homework2/tmnt.html
+++ b/homework2/tmnt.html
@@ -73,7 +73,7 @@
             <div class="review">
                 <p class="quote">
                     <img src="assets/rotten.gif" alt="Rotten" />
-                    <q>YOUR REVIEW HERE</q>
+                    <q>Nice! I liked it.</q>
                 </p>
                 <p>
                     <img src="assets/critic.gif" alt="Critic" />
@@ -132,7 +132,7 @@
             <div class="review">
                 <p class="quote">
                     <img src="assets/rotten.gif" alt="Rotten" />
-                    <q>YOUR REVIEW HERE</q>
+                    <q>Very interesting.</q>
                 </p>
                 <p>
                     <img src="assets/critic.gif" alt="Critic" />
