--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<ul>
 					<li><a href="homework1/pie.html">Homework 1: Recipe</a></li>
 					<li><a href="homework2/tmnt.html">Homework 2: Movie Review</a></li>
-					<li><a href="#">Homework 3: NerdLuv</a></li>
+					<li><a href="homework4/nerdluv.html">Homework 4: NerdLuv</a></li>
 				</ul>
 			</div>
 			<div id="lab">
@@ -46,7 +46,7 @@
 			<p style="margin:0px">Address: 1000 N 4TH ST, Fairfield Iowa 52557, U.S.A</p>
 			<p style="margin:0px">Email: <a>jahmed@miu.edu</a></p>
 		</div>
-		<div style="text-align:center; margin-top:30px">
+		<div style="text-align:right; margin-top:10px">
 			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2F"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/> </a>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer"> <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> </a>
 		</div>
