updated validator links

--- a/homework4/nerdluv.html
+++ b/homework4/nerdluv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!-- CSE 190 M Homework 4 (NerdLuv) -->
 <!-- shared page top HTML -->
 
@@ -20,7 +20,7 @@
 </header>
 <fieldset style="border-width:1px; width:60%">
 <legend style="border-width:1px">New User Signup:</legend>
-<form class="signUpForm" action="" method="get">
+<form class="signUpForm" method="get">
 	
 	
 	
@@ -58,10 +58,10 @@
         </li>
     </ul>
 
-    <a href="https://webster.cs.washington.edu/validate-html.php">
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2Fhomework4%2Fnerdluv.html">
         <img src="images/w3c-html5.png" alt="Valid HTML" />
     </a>
-    <a href="https://webster.cs.washington.edu/validate-css.php">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2Fhomework4%2Fnerdluv.html">
         <img src="images/w3c-css.png" alt="Valid CSS" />
     </a>
 </footer>
