added grade exercise page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<ul>
 					<li><a href="index.html">Lab 1: My Homepage</a></li>
 					<li><a href="aboutme.html">Lab 2: About Me</a></li>
+					<li><a href="lab3/grade.html">Lab 3: Grades Exercise</a></li>
 				</ul>
 			</div>
 			<div id="project">
