--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 					<li><a href="homework1/pie.html">Homework 1: Recipe</a></li>
 					<li><a href="homework2/tmnt.html">Homework 2: Movie Review</a></li>
 					<li><a href="homework4/nerdluv.html">Homework 4: NerdLuv</a></li>
+					<li><a href="homework8/ascii.html">Homework 8: Javascript and ASCII Animation Webpage</a></li>
+					<li><a href="homework9/fifteen.html">Homework 9: Puzzle</a></li>
 				</ul>
 			</div>
 			<div id="lab">
@@ -29,12 +31,31 @@
 					<li><a href="index.html">Lab 1: My Homepage</a></li>
 					<li><a href="aboutme.html">Lab 2: About Me</a></li>
 					<li><a href="lab3/grade.html">Lab 3: Grades Exercise</a></li>
+					<li><a href="lab5a/index.html">Lab 5a: Tip Calculator and On Click Alert</a></li>
+					<li><a href="lab6/decoratemytext.html">Lab 6: Decorate My Text</a></li>
+					<li><a href="lab7/module_colsure.html">Lab 7: Module and Closure</a></li>
+					<li><a href="lab8/MouseMaze/maze.html">Lab 8: Mouse Maze</a></li>
+				</ul>
+			</div>
+			<div id="quiz">
+				<h4>Quiz</h4>
+				<ul>
+					<li><a href="quiz1/servlet.html">Quiz 1: Servlet</a></li>
+					<li><a href="quiz2/state.html">Quiz 2: State Management</a></li>
+					<li><a href="quiz3/jspIntro.html">Quiz 3: JSP Intro</a></li>
+					<li><a href="quiz4/jspCustomTag.html">Quiz 4: JSP Custom Tags</a></li>
+					<li><a href="quiz5/jsTimerExercise/index.html">Quiz 5: JavaScript Timer Exercise</a></li>
+					<li><a href="quiz6/scopeExercise.html">Quiz 6: Scope Exercise</a></li>
+					<li><a href="quiz7/moduleExercise.html">Quiz 7: Module Exercise</a></li>
+					<li><a href="jqueryQuizzes/jqueryQuiz1.html">Quiz 8: JQuery Quiz-1</a></li>
+					<li><a href="jqueryQuizzes/jqueryQuiz2.html">Quiz 9: JQuery Quiz-2</a></li>
+					<li><a href="jqueryQuizzes/jqueryQuiz3.html">Quiz 10: JQuery Quiz-3</a></li>
 				</ul>
 			</div>
 			<div id="project">
 				<h4>Project</h4>
 				<ul>
-					<li><a>No project yet</a></li>
+					<li><a href="https://github.com/reza5630/WAP-Lab/tree/master/Try">Final Project: Online Dictionary</a></li>
 				</ul>	
 			</div>
 		</div>
