--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 	<div id="footer" style="background-color:black; color:white; padding-top:10px; padding-bottom:10px; margin-top:50px">
 		<div style="text-align:center">
 			<p style="margin:0px"><b>Jahanzeb Ahmed</b></p>
-			<p style="margin:0px">Maharishi International University</p>
-			<p style="margin:0px">Address: 1000 N 4TH ST, Fairfield Iowa 52557, U.S.A</p>
-			<p style="margin:0px">Email: <a>jahmed@miu.edu</a></p>
+			<p style="margin:0px">Software Engineer & Entrepreneur</p>
+			<p style="margin:0px">United States of America (U.S.A)</p>
+			<p style="margin:0px">Email: <a>seejahanzebahmed@gmail.com</a></p>
 		</div>
 		<div style="text-align:right; margin-top:10px">
 			<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjahanzebahmed7.github.io%2Fcs472%2F"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/> </a>
